--- a/index.html
+++ b/index.html
@@ -3,141 +3,194 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Telensan | Tasarım, Test, Ölçüm</title>
+  <title>Telensan - Anten Tasarımı & RF Ölçüm</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <style>
+    /* Genel Stil */
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
-      color: #333;
+      font-family: 'Inter', sans-serif;
+      background-color: #f8f9fa;
+      color: #1a1a1a;
     }
+    a { text-decoration: none; color: inherit; }
+    .container { width: 90%; max-width: 1200px; margin: auto; }
+
+    /* Header / Hero */
     header {
-      background-color: #0a1f44;
-      color: white;
-      padding: 20px 0;
+      background: linear-gradient(135deg, #0d1b2a, #1b263b);
+      color: #fff;
+      padding: 80px 0 60px 0;
       text-align: center;
     }
-    nav {
-      display: flex;
-      justify-content: center;
-      background-color: #132f61;
+    header h1 { font-size: 3rem; margin-bottom: 20px; }
+    header p { font-size: 1.2rem; margin-bottom: 30px; }
+    header .cta {
+      padding: 12px 30px;
+      background-color: #ff7f50;
+      color: #fff;
+      font-weight: 700;
+      border-radius: 5px;
+      transition: 0.3s;
     }
-    nav a {
-      color: white;
-      text-decoration: none;
-      padding: 15px 25px;
-      display: inline-block;
-    }
-    nav a:hover {
-      background-color: #0a1f44;
-    }
-    section {
-      padding: 60px 20px;
-      max-width: 1000px;
-      margin: auto;
-    }
-    h2 {
+    header .cta:hover { background-color: #ff5722; }
+
+    /* Hizmetler */
+    section.services {
+      padding: 60px 0;
       text-align: center;
-      color: #0a1f44;
-      margin-bottom: 40px;
     }
-    .services {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-around;
-      gap: 20px;
-    }
-    .service-card {
-      flex: 1 1 250px;
-      background-color: #f4f4f4;
-      padding: 20px;
+    section.services h2 { margin-bottom: 40px; font-size: 2.2rem; }
+    .cards { display: flex; flex-wrap: wrap; gap: 20px; justify-content: center; }
+    .card {
+      background-color: #fff;
+      flex: 1 1 220px;
+      max-width: 250px;
+      padding: 30px 20px;
       border-radius: 10px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+      transition: 0.3s;
+    }
+    .card:hover { transform: translateY(-5px); box-shadow: 0 6px 18px rgba(0,0,0,0.12); }
+    .card img { width: 60px; margin-bottom: 20px; }
+    .card h3 { margin-bottom: 15px; }
+    .card p { font-size: 0.95rem; color: #555; }
+
+    /* Teknoloji / Neden Biz */
+    section.tech {
+      background-color: #1b263b;
+      color: #fff;
+      padding: 60px 0;
+    }
+    section.tech h2 { text-align: center; margin-bottom: 40px; font-size: 2.2rem; }
+    .tech-list { display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; }
+    .tech-item {
+      background-color: #0d1b2a;
+      padding: 20px 30px;
+      border-radius: 8px;
+      flex: 1 1 180px;
+      max-width: 200px;
       text-align: center;
     }
-    footer {
-      background-color: #132f61;
-      color: white;
+
+    /* İletişim */
+    section.contact {
+      padding: 60px 0;
       text-align: center;
-      padding: 20px 0;
     }
-    input, textarea, button {
+    section.contact h2 { margin-bottom: 40px; font-size: 2.2rem; }
+    .contact-form { max-width: 500px; margin: auto; text-align: left; }
+    .contact-form label { display: block; margin-bottom: 5px; font-weight: 600; }
+    .contact-form input, .contact-form textarea {
       width: 100%;
-      padding: 10px;
-      margin: 5px 0 15px 0;
+      padding: 10px 15px;
+      margin-bottom: 20px;
       border-radius: 5px;
       border: 1px solid #ccc;
-      font-size: 16px;
+      font-size: 1rem;
     }
-    button {
-      background-color: #0a1f44;
-      color: white;
+    .contact-form button {
+      padding: 12px 30px;
+      background-color: #ff7f50;
+      color: #fff;
+      font-weight: 700;
+      border-radius: 5px;
       border: none;
       cursor: pointer;
+      transition: 0.3s;
     }
-    button:hover {
-      background-color: #132f61;
+    .contact-form button:hover { background-color: #ff5722; }
+
+    /* Footer */
+    footer {
+      background-color: #0d1b2a;
+      color: #fff;
+      text-align: center;
+      padding: 20px 0;
+    }
+
+    /* Responsive */
+    @media(max-width:768px){
+      header h1 { font-size: 2.2rem; }
+      .cards { flex-direction: column; align-items: center; }
+      .tech-list { flex-direction: column; align-items: center; }
     }
   </style>
 </head>
 <body>
 
+  <!-- Hero -->
   <header>
-    <h1>Telensan</h1>
-    <p>Anten Tasarımı, RF Ölçüm ve Danışmanlık Hizmetleri</p>
+    <div class="container">
+      <h1>Telensan</h1>
+      <p>Hassas Anten Tasarımı ve RF Ölçüm Çözümleri</p>
+      <a href="#services" class="cta">Hizmetlerimiz</a>
+    </div>
   </header>
 
-  <nav>
-    <a href="#hakkimizda">Hakkımızda</a>
-    <a href="#hizmetler">Hizmetler</a>
-    <a href="#iletisim">İletişim</a>
-  </nav>
-
-  <section id="hakkimizda">
-    <h2>Hakkımızda</h2>
-    <p>
-      Telensan, endüstriyel ve akademik müşterilerine anten tasarımı, simülasyon ve RF test çözümleri sunan bir mühendislik firmasıdır. 
-      Deneyimli kadromuzla projelerinize özel çözümler üreterek kaliteli çözümler sunuyoruz.
-    </p>
-  </section>
-
-  <section id="hizmetler">
-    <h2>Hizmetlerimiz</h2>
-    <div class="services">
-      <div class="service-card">
-        <h3>Anten Tasarımı</h3>
-        <p>Log-periodic, dipol, yama, patch, ve IoT antenlerinin tasarımı, optimize edilmesi ve entegrasyonu.</p>
-      </div>
-      <div class="service-card">
-        <h3>Simülasyon & Raporlama</h3>
-        <p>CST ve diğer simülasyon araçlarıyla anten ve RF sistemlerinin analizi ve detaylı raporlama.</p>
-      </div>
-      <div class="service-card">
-        <h3>RF Ölçüm & Test</h3>
-        <p>VNA ve RF test ekipmanlarıyla VSWR, Return Loss, Bandwidth ve diğer performans ölçümleri.</p>
-      </div>
-      <div class="service-card">
-        <h3>Danışmanlık</h3>
-        <p>Startup ve endüstriyel projeler için anten ve RF çözümleri danışmanlığı.</p>
+  <!-- Hizmetler -->
+  <section class="services" id="services">
+    <div class="container">
+      <h2>Hizmetlerimiz</h2>
+      <div class="cards">
+        <div class="card">
+          <img src="https://img.icons8.com/ios-filled/100/000000/antenna.png"/>
+          <h3>Anten Tasarımı</h3>
+          <p>Özel anten tasarımı, simülasyon ve prototip üretimi.</p>
+        </div>
+        <div class="card">
+          <img src="https://img.icons8.com/ios-filled/100/000000/combo-chart.png"/>
+          <h3>Simülasyon & Raporlama</h3>
+          <p>MATLAB ve CST ile simülasyon, detaylı raporlama.</p>
+        </div>
+        <div class="card">
+          <img src="https://img.icons8.com/ios-filled/100/000000/wireless-signal.png"/>
+          <h3>RF Ölçüm</h3>
+          <p>VNA ve test cihazları ile hassas RF ölçümleri.</p>
+        </div>
+        <div class="card">
+          <img src="https://img.icons8.com/ios-filled/100/000000/consultation.png"/>
+          <h3>Danışmanlık</h3>
+          <p>Proje danışmanlığı ve teknik destek sağlıyoruz.</p>
+        </div>
       </div>
     </div>
   </section>
 
-  <section id="iletisim">
-    <h2>İletişim</h2>
-    <form>
-      <input type="text" placeholder="Adınız" required>
-      <input type="email" placeholder="E-posta" required>
-      <textarea rows="5" placeholder="Mesajınız" required></textarea>
-      <button type="submit">Gönder</button>
-    </form>
-    <p style="text-align:center;">Email: info@telensan.com | LinkedIn: <a href="#" target="_blank">Telensan LinkedIn</a></p>
+  <!-- Teknoloji -->
+  <section class="tech">
+    <div class="container">
+      <h2>Kullandığımız Teknolojiler</h2>
+      <div class="tech-list">
+        <div class="tech-item">VNA Ölçümleri</div>
+        <div class="tech-item">MATLAB Simülasyon</div>
+        <div class="tech-item">CST Studio</div>
+        <div class="tech-item">Prototipleme</div>
+        <div class="tech-item">RF Test Cihazları</div>
+      </div>
+    </div>
   </section>
 
+  <!-- İletişim -->
+  <section class="contact" id="contact">
+    <div class="container">
+      <h2>İletişim</h2>
+      <form class="contact-form">
+        <label for="name">Ad Soyad</label>
+        <input type="text" id="name" placeholder="Adınız">
+        <label for="email">E-posta</label>
+        <input type="email" id="email" placeholder="mail@ornek.com">
+        <label for="message">Mesaj</label>
+        <textarea id="message" rows="5" placeholder="Mesajınızı yazın..."></textarea>
+        <button type="submit">Gönder</button>
+      </form>
+    </div>
+  </section>
+
+  <!-- Footer -->
   <footer>
-    <p>© 2025 Telensan. Tüm hakları saklıdır.</p>
+    &copy; 2025 Telensan. Tüm hakları saklıdır.
   </footer>
 
 </body>
 </html>
-
