--- a/index.html
+++ b/index.html
@@ -106,22 +106,22 @@
     <h2>Hizmetlerimiz</h2>
     <div class="services">
       <div class="service-card">
-        <img src="https://img.icons8.com/ios-filled/100/000000/antenna.png" alt="Anten Tasarımı">
+        <img src="https://thumb.silhouette-ac.com/t/e5/e5f4172f250d3f2903b16ece5bc728f9_t.jpeg" alt="Anten Tasarımı">
         <h3>Anten Tasarımı</h3>
-        <p>Log-periodic, dipol, patch ve IoT antenlerinin tasarımı, optimizasyonu ve entegrasyonu.</p>
+        <p>Log-periyodik, dipol, yama(patch), heliks ve IoT antenlerinin tasarımı, optimizasyonu ve entegrasyonu.</p>
       </div>
       <div class="service-card">
-        <img src="https://img.icons8.com/ios-filled/100/000000/combo-chart.png" alt="Simülasyon & Raporlama">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7a/Line_chart_icon_Noun_70892_cc.svg/512px-Line_chart_icon_Noun_70892_cc.svg.png" alt="Simülasyon & Raporlama">
         <h3>Simülasyon & Raporlama</h3>
         <p>CST ve diğer simülasyon araçlarıyla anten ve RF sistemlerinin analizi ve detaylı raporlama.</p>
       </div>
       <div class="service-card">
-        <img src="https://img.icons8.com/ios-filled/100/000000/wireless-signal.png" alt="RF Ölçüm & Test">
+        <img src="https://static.vecteezy.com/system/resources/previews/020/582/627/non_2x/coaxial-cable-wire-glyph-icon-illustration-vector.jpg" alt="RF Ölçüm & Test">
         <h3>RF Ölçüm & Test</h3>
         <p>VNA ve RF test ekipmanlarıyla VSWR, Return Loss, Bandwidth ve diğer performans ölçümleri.</p>
       </div>
       <div class="service-card">
-        <img src="https://img.icons8.com/ios-filled/100/000000/consultation.png" alt="Danışmanlık">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSOmGCYMYvskjcPeTi45ec4xuS8ANl-Uz4JJQ&s" alt="Danışmanlık">
         <h3>Danışmanlık</h3>
         <p>Startup ve endüstriyel projeler için anten ve RF çözümleri danışmanlığı.</p>
       </div>
@@ -136,7 +136,7 @@
       <textarea rows="5" placeholder="Mesajınız" required></textarea>
       <button type="submit">Gönder</button>
     </form>
-    <p style="text-align:center;">Email: info@telensan.com | LinkedIn: <a href="#" target="_blank">Telensan LinkedIn</a></p>
+    <p style="text-align:center;">e-posta: info@telensan.com | LinkedIn: <a href="#" target="_blank">Telensan LinkedIn</a></p>
   </section>
 
   <footer>
