--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   </header>
 
   <nav>
-    <a href="#hizmetler">Hizmetler</a>
+    <a href="index.html">Hizmetler</a>
     <a href="hakkimizda.html">Hakkımızda</a>
     <a href="#iletisim">İletişim</a>
   </nav>
@@ -145,3 +145,4 @@
 
 </body>
 </html>
+
