--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <div class="service-card">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7a/Line_chart_icon_Noun_70892_cc.svg/512px-Line_chart_icon_Noun_70892_cc.svg.png" alt="Simülasyon & Raporlama">
         <h3>Simülasyon & Raporlama</h3>
-        <p>CST ve diğer simülasyon araçlarıyla anten ve RF sistemlerinin analizi ve detaylı raporlama.</p>
+        <p>Simülasyon araçlarıyla anten ve RF sistemlerinin analizi ve detaylı raporlama.</p>
       </div>
       <div class="service-card">
         <img src="https://static.vecteezy.com/system/resources/previews/020/582/627/non_2x/coaxial-cable-wire-glyph-icon-illustration-vector.jpg" alt="RF Ölçüm & Test">
@@ -136,7 +136,7 @@
       <textarea rows="5" placeholder="Mesajınız" required></textarea>
       <button type="submit">Gönder</button>
     </form>
-    <p style="text-align:center;">e-posta: info@telensan.com | LinkedIn: <a href="#" target="_blank">Telensan LinkedIn</a></p>
+    <p style="text-align:center;">e-posta: info@telensan.com 
   </section>
 
   <footer>
@@ -145,4 +145,5 @@
 
 </body>
 </html>
+
 
