--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -122,7 +122,7 @@
       <textarea rows="5" placeholder="Mesajınız" required></textarea>
       <button type="submit">Gönder</button>
     </form>
-    <p style="text-align:center;">e-posta: info@telensan.com | LinkedIn: <a href="#" target="_blank">Telensan LinkedIn</a></p>
+    <p style="text-align:center;">e-posta: info@telensan.com 
   </section>
 
   <footer>
