--- a/index.html
+++ b/index.html
@@ -11,42 +11,100 @@
       line-height: 1.6;
       color: #333;
     }
+  
     header {
       background-color: #0a1f44;
       color: white;
       padding: 20px 0;
       text-align: center;
     }
+  
+    /* Navbar */
     nav {
       display: flex;
       justify-content: center;
       background-color: #132f61;
     }
-    nav a {
-      color: white;
+  
+    nav ul {
+      list-style: none;
+      display: flex;
+      gap: 20px;
+      margin: 0;
+      padding: 0;
+    }
+  
+    nav ul li {
+      position: relative;
+    }
+  
+    nav ul li a {
       text-decoration: none;
+      color: white;
+      font-weight: 500;
       padding: 15px 25px;
       display: inline-block;
     }
-    nav a:hover {
+  
+    /* Üst menü hover */
+    nav ul li a:hover {
       background-color: #0a1f44;
     }
+  
+    /* Dropdown menü */
+    .dropdown-menu {
+      display: none;
+      position: absolute;
+      top: 100%;
+      left: -24px;
+      background: white;
+      padding: 5px 0;
+      list-style: none;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      border-radius: 6px;
+      min-width: 180px;
+      z-index: 100;
+    }
+  
+    .dropdown-menu li a {
+      color: #1b1b1b;
+      text-decoration: none;
+      padding: 10px 20px;
+      display: block;
+      background-color: white;
+    }
+  
+    /* Dropdown hover açılması */
+    .dropdown:hover .dropdown-menu {
+      display: block;
+    }
+  
+    /* Dropdown link hover */
+    .dropdown-menu li a:hover {
+      background-color: #0a1f44; /* hover arka plan */
+      color: white;               /* hover yazı rengi */
+      border-radius: 4px;
+    }
+  
     section {
       padding: 60px 20px;
       max-width: 1000px;
       margin: auto;
     }
+  
     h2 {
       text-align: center;
       color: #0a1f44;
       margin-bottom: 40px;
     }
+  
     .services {
       display: flex;
       flex-wrap: wrap;
       justify-content: space-around;
       gap: 20px;
     }
+  
     .service-card {
       flex: 1 1 250px;
       background-color: #f4f4f4;
@@ -56,20 +114,34 @@
       text-align: center;
       transition: transform 0.3s, box-shadow 0.3s;
     }
+  
     .service-card:hover {
       transform: translateY(-5px);
       box-shadow: 0 6px 15px rgba(0,0,0,0.15);
     }
+  
     .service-card img {
       width: 60px;
       margin-bottom: 15px;
     }
+  
+    .service-card h3 {
+      color: #222;
+      font-weight: 600;
+    }
+  
+    .service-card a {
+      text-decoration: none;
+      color: inherit;
+    }
+  
     footer {
       background-color: #132f61;
       color: white;
       text-align: center;
       padding: 20px 0;
     }
+  
     input, textarea, button {
       width: 100%;
       padding: 10px;
@@ -78,16 +150,19 @@
       border: 1px solid #ccc;
       font-size: 16px;
     }
+  
     button {
       background-color: #0a1f44;
       color: white;
       border: none;
       cursor: pointer;
     }
+  
     button:hover {
       background-color: #132f61;
     }
   </style>
+  
 </head>
 <body>
 
@@ -97,37 +172,52 @@
   </header>
 
   <nav>
-    <a href="index.html">Hizmetler</a>
-    <a href="hakkimizda.html">Hakkımızda</a>
-    <a href="#iletisim">İletişim</a>
+    <ul>
+      <li class="dropdown">
+        <a href="#hizmetler">Hizmetler ▾</a>
+        <ul class="dropdown-menu">
+          <li><a href="antentasarimi.html">Anten Tasarımı</a></li>
+          <li><a href="simulasyon.html">Simülasyon & Analiz</a></li>
+          <li><a href="testolcum.html">Test & Ölçüm</a></li>
+          <li><a href="egitim.html">Eğitim & Danışmanlık</a></li>
+        </ul>
+      </li>
+      <li><a href="hakkimizda.html">Hakkımızda</a></li>
+      <li><a href="#iletisim">İletişim</a></li>
+    </ul>
   </nav>
+  
 
   <section id="hizmetler">
     <h2>Hizmetlerimiz</h2>
     <div class="services">
       <div class="service-card">
-        <img src="https://thumb.silhouette-ac.com/t/e5/e5f4172f250d3f2903b16ece5bc728f9_t.jpeg" alt="Anten Tasarımı">
-        <h3>Anten Tasarımı</h3>
+        <a href="antentasarimi.html">
+          <img src="https://thumb.silhouette-ac.com/t/e5/e5f4172f250d3f2903b16ece5bc728f9_t.jpeg" alt="Anten Tasarımı">
+          <h3>Anten Tasarımı</h3></a>
         <p>Log-periyodik, dipol, yama(patch), heliks ve IoT antenlerinin tasarımı, optimizasyonu ve entegrasyonu.</p>
       </div>
       <div class="service-card">
+        <a href="simulasyon.html">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7a/Line_chart_icon_Noun_70892_cc.svg/512px-Line_chart_icon_Noun_70892_cc.svg.png" alt="Simülasyon & Raporlama">
-        <h3>Simülasyon & Raporlama</h3>
-        <p>Simülasyon araçlarıyla anten ve RF sistemlerinin analizi ve detaylı raporlama.</p>
+        <h3>Simülasyon & Raporlama</h3></a>
+        <p>Simülasyon araçlarıyla anten sistemlerinin analizi ve raporları.</p>
       </div>
       <div class="service-card">
+        <a href="rfolcum.html">
         <img src="https://static.vecteezy.com/system/resources/previews/020/582/627/non_2x/coaxial-cable-wire-glyph-icon-illustration-vector.jpg" alt="RF Ölçüm & Test">
-        <h3>RF Ölçüm & Test</h3>
+        <h3>RF Ölçüm & Test</h3></a>
         <p>VNA ve RF test ekipmanlarıyla VSWR, Return Loss, Bandwidth ve diğer performans ölçümleri.</p>
       </div>
       <div class="service-card">
+        <a href="danismanlik.html">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSOmGCYMYvskjcPeTi45ec4xuS8ANl-Uz4JJQ&s" alt="Danışmanlık">
-        <h3>Danışmanlık</h3>
+        <h3>Danışmanlık</h3></a>
         <p>Startup ve endüstriyel projeler için anten ve RF çözümleri danışmanlığı.</p>
       </div>
     </div>
   </section>
-
+      
   <section id="iletisim">
     <h2>İletişim</h2>
     <form>
@@ -145,5 +235,3 @@
 
 </body>
 </html>
-
-
