--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       display: flex;
       justify-content: center;  /* Logoyu yatayda ortalar */
       align-items: center;
-      background-color: #0a1f44;
+      background-color: #ffffff;
       color: white;
       padding: 20px 0;
       text-align: center;
@@ -242,3 +242,4 @@
 
 </body>
 </html>
+
