--- a/antentasarimi.html
+++ b/antentasarimi.html
@@ -13,12 +13,19 @@
     }
   
     header {
-      background-color: #0a1f44;
+      display: flex;
+      justify-content: center;  /* Logoyu yatayda ortalar */
+      align-items: center;
+      background-color: #ffffff;
       color: white;
-      padding: 20px 0;
+      padding: 2px 0;
       text-align: center;
     }
-  
+    
+    #logo {
+      width: 250px;             
+      height: auto;             
+    }
     /* Navbar */
     nav {
       display: flex;
@@ -167,8 +174,7 @@
 <body>
 
   <header>
-    <h1>Telensan</h1>
-    <p>Anten Tasarımı, RF Ölçüm ve Danışmanlık Hizmetleri</p>
+    <img src="logoT.png" id="logo">
   </header>
 
   <nav>
